<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_inicio" />

    <item
        android:id="@+id/navigation_extrato"
        android:icon="@drawable/ic_document"
        android:title="@string/title_extrato" />

    <item
        android:id="@+id/navigation_transacoes"
        android:icon="@drawable/ic_transacao"
        android:title="@string/title_transacoes" />

    <item
        android:id="@+id/navigation_servicos"
        android:icon="@drawable/ic_services"
        android:title="@string/title_servicos" />

    <item
        android:id="@+id/navigation_ajuda"
        android:icon="@drawable/ic_help"
        android:title="@string/title_ajuda" />

</menu>
